force-app/main/default/objects/Galaxy__c/Galaxy__c.object-meta.xml
<CustomObject>
    <label>Galaxy</label>
    <nameField>
        <label>Galaxy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Galaxies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>