force-app/main/default/objects/Galaxy__c/fields/Discovered_By__c.field-meta.xml
<CustomField>
    <fullName>Discovered_By__c</fullName>
    <description>Astronomer who discovered the galaxy</description>
    <inlineHelpText>Astronomer who discovered the galaxy</inlineHelpText>
    <label>Discovered By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>