force-app/main/default/objects/Galaxy__c/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <description>Date the Galaxy was first Discovered</description>
    <inlineHelpText>Date the Galaxy was first Discovered</inlineHelpText>
    <label>Discovery Date</label>
    <type>Date</type>
</CustomField>