force-app/main/default/objects/Galaxy__c/fields/Number_of_Stars__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stars__c</fullName>
    <description>Number of stars in this galaxy</description>
    <label>Number of Stars</label>
    <summaryForeignKey>Star__c.Galaxy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>