force-app/main/default/objects/Galaxy__c/fields/Shape__c.field-meta.xml
<CustomField>
    <fullName>Shape__c</fullName>
    <description>Shape should be spiral, elliptical, lenticular, and irregular.</description>
    <inlineHelpText>Shape should be spiral, elliptical, lenticular, and irregular.</inlineHelpText>
    <label>Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spiral</fullName>
            </value>
            <value>
                <fullName>Elliptical</fullName>
            </value>
            <value>
                <fullName>Lenticular</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>