force-app/main/default/objects/Galaxy__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size, in Millions of Light Years</description>
    <inlineHelpText>Size, in Millions of Light Years</inlineHelpText>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>